--- a/Semana 1/index.html
+++ b/Semana 1/index.html
@@ -1,3 +1,13 @@
-;Me llamo Gabriela, tengo 19 años y soy de Santo Domingo, Republica Dominicana. Actualmente vivo en La Romana y estudi Diseño de Comunicacion en la Escuela de Diseño de Altos de Chavon.
+<!DOCTYPE html>
+
+<html>
+<title> Bibliografia </title>
+
+<body>
+<p>;Me llamo Gabriela, tengo 19 años y soy de Santo Domingo, Republica Dominicana. Actualmente vivo en La Romana y estudi Diseño de Comunicacion en la Escuela de Diseño de Altos de Chavon.</p>
 
 <IMG SRC="https://www.facebook.com/photo.php?fbid=10200520597884263&set=a.1579091964026.89116.1437472841&type=3&theater"> </IMG>
+
+</body>
+
+</html>
